--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
         });
 
         // API Configuration
-        const API_BASE = '/api';
+        const API_BASE = '/api.js';
         console.log('🔍 DEBUG - API_BASE value:', API_BASE, 'Type:', typeof API_BASE);
 console.log('🔍 DEBUG - Full login URL would be:', `${API_BASE}/login`);
 console.log('🔍 DEBUG - Window location:', window.location.href);
