--- a/upload.html
+++ b/upload.html
@@ -1552,7 +1552,7 @@ function validateCurrentStep() {
             showNotification(`Auto-corrected page name to: ${suggestedName}`, 'info');
             // Don't return false, continue with corrected name
         } else {
-            return false;
+             return true;
         }
     }
     
