--- a/upload.html
+++ b/upload.html
@@ -1823,7 +1823,7 @@ function checkAuthentication() {
                         setTimeout(() => {
                             showNotification('Article live! Redirecting to dashboard...', 'success');
                             setTimeout(() => {
-                                window.location.href = 'admin.html';
+                                window.location.href = 'article.html';
                             }, 2000);
                         }, 1000);
                     }
