--- a/article.html
+++ b/article.html
@@ -1164,7 +1164,7 @@
         let currentArticle = null;
         let currentUser = null;
         let articleInteractions = { liked: false, bookmarked: false };
-        const API_BASE_URL = 'https://super-articles2.vercel.app/api';
+        const API_BASE_URL = 'https://super-articles2-dw6dzdreu-duede.vercel.app/api';
         
         // Get article ID from URL
         function getArticleIdFromUrl() {
