--- a/article.html
+++ b/article.html
@@ -1193,7 +1193,7 @@
             const user = getUserFromCookies();
             
             try {
-                const url = `${API_BASE_URL}/view?encryptedId=${articleId}`;
+                const url = `${API_BASE_URL}/view.js?encryptedId=${articleId}`;
                 const response = await fetch(url, {
                     credentials: 'include'
                 });
