--- a/upload.html
+++ b/upload.html
@@ -1051,7 +1051,7 @@
     <div id="notification" class="notification"></div>
 
     <!-- Quill Editor -->
-    <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.7/quill.min.js"></script>
 
     <script>
 // Add this function near the top of your script
